[tool.poetry]
name = "bankWidgetProject"
version = "0.1.1"
description = ""
authors = ["Karakulov Dmitriy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.black]
line_length = 119
exclude = '/(\.git)/'

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
